[gd_scene load_steps=7 format=3 uid="uid://di1jfendj1dmp"]

[ext_resource type="Script" path="res://plante.gd" id="1_dxlyv"]
[ext_resource type="Texture2D" uid="uid://by526arewt435" path="res://Ressources/Images/flower_01.png" id="2_oprft"]
[ext_resource type="AudioStream" uid="uid://bd113eks2bjv3" path="res://Ressources/Sons/pickup_failed.ogg" id="3_vypfr"]
[ext_resource type="AudioStream" uid="uid://bam4qvobxjvpu" path="res://Ressources/Sons/pickup_inprogress.ogg" id="4_7xaji"]
[ext_resource type="AudioStream" uid="uid://p32nw02y01aj" path="res://Ressources/Sons/pickup_complete.ogg" id="5_1s08i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_my7bd"]
radius = 16.0
height = 48.0

[node name="Plante" type="Area2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_dxlyv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oprft")
offset = Vector2(-4, -27.14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("CapsuleShape2D_my7bd")
metadata/_edit_lock_ = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SuspendTimer" type="Timer" parent="."]
one_shot = true

[node name="pickup_failed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vypfr")

[node name="pickup_inprogress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7xaji")

[node name="pickup_complete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1s08i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="SuspendTimer" to="." method="_end_suspend_timer"]
